# Floship_test

./: .gitignore  docker-compose.yml
Store/: .env.example  Dockerfile  pyproject.toml
Store/core/: settings.py  urls.py
Store/store/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
Store/store/migrations/: 0001_initial.py
Warehouse/: .env.example  Dockerfile  pyproject.toml
Warehouse/core/: settings.py  urls.py
Warehouse/warehouse/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
Warehouse/warehouse/migrations/: 0001_initial.py
